--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %} 
 
-   <h3>home</h3>
-   
+   <h2>Home</h2>
+   <b>To this page the text from button page will be sent.</b>
     <div class="messages" id="messages"></div>
     <script type="text/javascript">
         var socketio = io();
@@ -13,7 +13,7 @@
             const content=`
             <div class="text">
                 <span>    
-                    <strong>${msg}</strong>: 
+                    <p>${msg}</p>
                 </span>
             </div>
             `
@@ -21,19 +21,19 @@
         }
         socketio.on("message",(data)=>{
             console.log(data)
-           // console.log(data.message)
             createMessage(data)
         })
 
     </script>
   
 
-{% for msg in messages %}
+<!-- if one wants to loop through some kind of array when saving all the words
+    {% for msg in messages %}
 
     <script  type="text/javascript">
         createMessage('{{msg.messages}}')
         console.log("eh")
     </script>
 
-{% endfor %} 
+{% endfor %}  -->
 {% endblock %}
