--- a/templates/button.html
+++ b/templates/button.html
@@ -2,18 +2,18 @@
 {%  block content %}
 <div class="message-box">
     <h2>Button </h2>
-    <div class="join">
-        <input type="text" placeholder="Write something." id="code" name="code" />
-        <button type="submit" name="join" onClick="sendMessage()">Send</button>
+    <div class="send">
+        <input type="text" placeholder="Write something." id="text-to-change" name="text-to-change" />
+        <button type="submit" name="send" onClick="sendMessage()">Send</button>
     </div>
 </div>
 <script type="text/javascript">
-    var socketio = io();
+    var socketio = io()
 
    // const messages=document.getElementById("messages")
 
     const sendMessage = ()=>{
-        const message = document.getElementById("code")
+        const message = document.getElementById("text-to-change")
         if (message.value=="") return;
         socketio.emit("message", {data: message.value})
         console.log(message.value)
